--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -48,6 +48,9 @@ import Layout from '@layouts/Layout.astro';
 </Layout>
 
 <style>
+    section {
+        margin: 2.5rem 0 5rem;
+    }
     h2 {
         padding-top: 1.66rem;
         padding-bottom: 0;
