--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -15,7 +15,13 @@ const currentPath = Astro.url.pathname;
         const toggleBurger = () => {
             burgerToggle.classList.toggle('close-icon');
             headerNav.classList.toggle('show-nav');
-            socialWrapper.classList.toggle('show-nav');
+            if (!socialWrapper.classList.contains('show-nav')) {
+                setTimeout(() => {
+                    socialWrapper.classList.toggle('show-nav');
+                }, 300)
+            } else {
+                socialWrapper.classList.toggle('show-nav');
+            }
             documentBody.classList.toggle('fix-body');
             if (burgerToggle.classList.contains('close-icon')) {
                 headerLogo.style.transform = 'scale(0)';
@@ -162,7 +168,7 @@ const currentPath = Astro.url.pathname;
                     <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
                 </svg>
             </a>
-            <a class="social-icon" title="Link zu meiner E-Mail" href="mailto:hallo@frankzinsli.ch">
+            <a class="social-icon" title="Link zu Kontaktformular" href="/kontakt#form">
                 <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="44"
