--- a/src/components/ProjectOverview.astro
+++ b/src/components/ProjectOverview.astro
@@ -1,7 +1,7 @@
 ---
-import oekologischImage from "../assets/projects/oekologisch-lg.webp";
-import headerImage from "../assets/projects/1914-in-a-timeline-lg.webp";
-import observationMapImage from "../assets/projects/observation-map-lg.webp";
+import oekologischImage from "@assets/projects/oekologisch-lg.webp";
+import headerImage from "@assets/projects/1914-in-a-timeline-lg.webp";
+import observationMapImage from "@assets/projects/observation-map-lg.webp";
 import {Image} from "astro:assets";
 ---
 <section  id="uebersicht">
