--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -13,13 +13,11 @@ import Layout from '@layouts/Layout.astro';
             Diese Datenschutzerklärung informiert Sie darüber, wie personenbezogene Daten auf der Website [frankzinsli.ch] gesammeln, verwendet und geschützt werden.
         </p>
 
-
         <h2>1. Verantwortliche Stelle</h2>
         <p>
             Verantwortlich für die Datenverarbeitung auf dieser Website ist:<br />
             Frank Zinsli - mail(at)frankzinsli.ch
         </p>
-
 
         <h2>2. Erhebung und Verarbeitung von Daten</h2>
         <ul>
@@ -31,12 +29,10 @@ import Layout from '@layouts/Layout.astro';
             </li>
         </ul>
 
-
         <h2>3. Matomo (Piwik) Analytics</h2>
         <p>
             Diese Website verwendet Matomo (ehemals Piwik), ein Open-Source-Analysetool. Matomo verwendet Cookies, um Informationen über die Nutzung der Website zu sammeln. Diese Daten helfen, die Website zu verbessern. Die IP-Adressen der Besucher werden anonymisiert, bevor sie gespeichert werden.
         </p>
-
 
         <h2>4. Cookies</h2>
         <p>
@@ -48,25 +44,21 @@ import Layout from '@layouts/Layout.astro';
             Ihre personenbezogenen Daten werden nicht an Dritte weitergegeben.
         <p>
 
-
         <h2>6. Ihre Rechte</h2>
         <p>
             Sie haben das Recht, Auskunft über die von uns gespeicherten Daten zu erhalten, sowie das Recht auf Berichtigung, Löschung oder Einschränkung der Verarbeitung Ihrer Daten.
         </p>
-
 
         <h2>7. Änderungen dieser Datenschutzerklärung</h2>
         <p>
             Diese Datenschutzerklärung kann aktualisiert werden, um Änderungen in den Datenschutzpraktiken widerzuspiegeln. Es ist empfehlenswert, diese Seite regelmäßig zu überprüfen, um auf dem neuesten Stand zu bleiben.
         </p>
 
-
         <h2>8. Kontakt</h2>
         <p>
             Bei Fragen oder anderen Anliegen, kontaktieren Sie mich bitte:
             <br>
-            Frank Zinsli
-            mail(at)frankzinsli.ch
+            Frank Zinsli mail(at)frankzinsli.ch
         </p>
 
         <p style="padding-top: 2rem">
