--- a/src/pages/projekte/1914-in-a-timeline-glamhack.astro
+++ b/src/pages/projekte/1914-in-a-timeline-glamhack.astro
@@ -1,6 +1,11 @@
 ---
-import headerImage from '@assets/projects/1914-in-a-timeline-lg.webp';
-import LayoutProject from "../../layouts/LayoutProject.astro";
+import {Image} from "astro:assets";
+import headerImage from '@assets/projects/1914-in-a-timeline-header.webp';
+import LayoutProject from "@layouts/LayoutProject.astro";
+import herausforderungImg from '@assets/icons/herausforderung.svg';
+import loesungImg from '@assets/icons/loesung.svg';
+import fazitImg from '@assets/icons/fazit.svg';
+import ergebnissImg from '@assets/icons/ergebnisse.svg';
 const metaTitle = 'Frank - Projekte - GLAMHack';
 const metaDescription = 'MetaDescription';
 const headerImgAlt = 'Alt Description';
@@ -14,20 +19,94 @@ const headerImgAlt = 'Alt Description';
     <section>
         <h1>1914 in a timeline - Begegnung mit der Vergangenheit</h1>
 
-        <h2>Herausforderung</h2>
-        <p>Im Jahr 2020 nahm ich gemeinsam mit drei Studienkollegen am "GLAM-Hack" teil, einem Event, der vom Schweizer Verein "opendata.ch" organisiert wurde. Der Fokus des Hackathons lag auf dem freien Zugang zu öffentlichen Daten und Linked Open Data. Unsere Herausforderung bestand darin, die historischen französischen Zeitungsartikel aus dem Archiv in einen modernen Kontext zu stellen und für die Öffentlichkeit zugänglich zu machen.</p>
+        <section class="content">
+            <div class="text">
+                <h2>Herausforderung</h2>
+                <p>Im Jahr 2020 nahm ich gemeinsam mit drei Studienkollegen am "GLAM-Hack" teil, einem Event, der vom Schweizer Verein "opendata.ch" organisiert wurde. Der Fokus des Hackathons lag auf dem freien Zugang zu öffentlichen Daten und Linked Open Data. Unsere Herausforderung bestand darin, die historischen französischen Zeitungsartikel aus dem Archiv in einen modernen Kontext zu stellen und für die Öffentlichkeit zugänglich zu machen.</p>
+            </div>
+            <Image
+                src={herausforderungImg}
+                alt="AltImage"
+                loading="eager"
+            />
+        </section>
 
-        <h2>Lösung</h2>
-        <p>Unser Projekt "1914-in-a-timeline" setzte genau hier an. Wir hatten Zugriff auf den Datensatz französischer Zeitungsartikel aus dem Jahr 1914, darunter die "Gazette de Lausanne" und die "Tribune de Genève". Unser Ziel war es, diese Artikel ins Deutsche zu übersetzen und mit aktuellen Artikeln aus dem Jahr 2020 in Beziehung zu setzen.</p>
-        <p>Um diese Aufgabe zu bewältigen, haben wir intensiv an der Konzeption gearbeitet. Anfangs planten wir die Verwendung von Übersetzungs-Engines wie Google Cloud Translation oder DeepL. Doch bald erkannten wir, dass wir uns auf ausgewählte Artikel konzentrieren wollten, die manuell übersetzt werden konnten. Auf diese Weise konnten wir sicherstellen, dass die Übersetzungen von hoher Qualität waren.</p>
-        <p>Unsere Ergebnisse wurden auf einer Website veröffentlicht, auf der die übersetzten Artikel mit aktuellen, themenverwandten Artikeln aus dem Jahr 2020 verknüpft wurden. Dies schuf eine spannende zeitliche Verbindung zwischen der Vergangenheit und der Gegenwart.</p>
+        <section class="content">
+            <div class="text">
+                <h2>Lösung</h2>
+                <p>Unser Projekt "1914-in-a-timeline" setzte genau hier an. Wir hatten Zugriff auf den Datensatz französischer Zeitungsartikel aus dem Jahr 1914, darunter die "Gazette de Lausanne" und die "Tribune de Genève". Unser Ziel war es, diese Artikel ins Deutsche zu übersetzen und mit aktuellen Artikeln aus dem Jahr 2020 in Beziehung zu setzen.</p>
+                <p>Um diese Aufgabe zu bewältigen, haben wir intensiv an der Konzeption gearbeitet. Anfangs planten wir die Verwendung von Übersetzungs-Engines wie Google Cloud Translation oder DeepL. Doch bald erkannten wir, dass wir uns auf ausgewählte Artikel konzentrieren wollten, die manuell übersetzt werden konnten. Auf diese Weise konnten wir sicherstellen, dass die Übersetzungen von hoher Qualität waren.</p>
+                <p>Unsere Ergebnisse wurden auf einer Website veröffentlicht, auf der die übersetzten Artikel mit aktuellen, themenverwandten Artikeln aus dem Jahr 2020 verknüpft wurden. Dies schuf eine spannende zeitliche Verbindung zwischen der Vergangenheit und der Gegenwart.</p>
+            </div>
+            <Image
+                src={loesungImg}
+                alt="AltImage"
+                loading="eager"
+            />
+        </section>
 
-        <h2>Ergebnisse</h2>
-        <p>Unser Projekt "1914-in-a-timeline" eröffnete neue Einblicke in das Jahr 1914 und in die Entwicklungen, die die Schweiz und die Welt zu dieser Zeit erlebten. Wir fanden nicht nur historische Artikel, die über den Ausbruch des Ersten Weltkriegs berichteten, sondern auch Beiträge, die das tägliche Leben und die kulturelle Entwicklung in der Schweiz beleuchteten.</p>
-        <p>Besonders interessant war die Entdeckung des "Röstigraben", einer kulturellen Kluft zwischen Deutsch- und Französischsprachigen Schweizern, die im Zusammenhang mit dem Ersten Weltkrieg entstand. Diese Kluft ist bis heute spürbar und prägt die schweizerische Gesellschaft.</p>
-        <p>Unsere Case Study wurde auf der Plattform "opendata.swiss" veröffentlicht, um anderen Forschern und Geschichtsinteressierten den Zugang zu den Daten und unserer Arbeit zu ermöglichen. Unser Projekt gewährte Einblicke in die Vergangenheit und in die Bedeutung von Linked Open Data, um historische Zusammenhänge zu verstehen und zu vermitteln.</p>
+        <section class="content">
+            <div class="text">
+                <h2>Ergebnisse</h2>
+                <p>Unser Projekt "1914-in-a-timeline" eröffnete neue Einblicke in das Jahr 1914 und in die Entwicklungen, die die Schweiz und die Welt zu dieser Zeit erlebten. Wir fanden nicht nur historische Artikel, die über den Ausbruch des Ersten Weltkriegs berichteten, sondern auch Beiträge, die das tägliche Leben und die kulturelle Entwicklung in der Schweiz beleuchteten.</p>
+                <p>Besonders interessant war die Entdeckung des "Röstigraben", einer kulturellen Kluft zwischen Deutsch- und Französischsprachigen Schweizern, die im Zusammenhang mit dem Ersten Weltkrieg entstand. Diese Kluft ist bis heute spürbar und prägt die schweizerische Gesellschaft.</p>
+                <p>Unsere Case Study wurde auf der Plattform "opendata.swiss" veröffentlicht, um anderen Forschern und Geschichtsinteressierten den Zugang zu den Daten und unserer Arbeit zu ermöglichen. Unser Projekt gewährte Einblicke in die Vergangenheit und in die Bedeutung von Linked Open Data, um historische Zusammenhänge zu verstehen und zu vermitteln.</p>
+            </div>
+            <Image
+                src={ergebnissImg}
+                alt="AltImage"
+                loading="eager"
+            />
+        </section>
 
-        <h2>Fazit</h2>
-        <p>"1914-in-a-timeline" war ein aufschlussreiches und lehrreiches Projekt, das die Vergangenheit zum Leben erweckte und den Wert von offenen Daten und Übersetzungsarbeit verdeutlichte. Es zeigte, wie moderne Technologie genutzt werden kann, um historische Informationen zugänglich und relevant zu machen. Unsere Case Study und Website stehen als Ressourcen für zukünftige Forscher und Interessierte zur Verfügung und tragen dazu bei, Geschichte und Kultur besser zu verstehen.</p>
+        <section class="content">
+            <div class="text">
+                <h2>Fazit</h2>
+                <p>"1914-in-a-timeline" war ein aufschlussreiches und lehrreiches Projekt, das die Vergangenheit zum Leben erweckte und den Wert von offenen Daten und Übersetzungsarbeit verdeutlichte. Es zeigte, wie moderne Technologie genutzt werden kann, um historische Informationen zugänglich und relevant zu machen. Unsere Case Study und Website stehen als Ressourcen für zukünftige Forscher und Interessierte zur Verfügung und tragen dazu bei, Geschichte und Kultur besser zu verstehen.</p>
+            </div>
+            <Image
+                src={fazitImg}
+                alt="AltImage"
+                loading="eager"
+            />
+        </section>
     </section>
 </LayoutProject>
+
+<style lang="scss">
+  section {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 5rem;
+    h1 {
+      margin-bottom: -3rem;
+    }
+  }
+  .content {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
+    &:nth-child(even) {
+      flex-direction: row-reverse;
+    }
+    .text {
+      width: calc(66% - 2.5rem);
+    }
+    img {
+      width: 33%;
+      height: auto;
+    }
+    @media (max-width: 650px) {
+      flex-flow: column;
+      gap: .5rem;
+      &:nth-child(even) {
+        flex-direction: column;
+      }
+      .text, img {
+        width: 100%;
+      }
+    }
+  }
+</style>
