--- a/src/components/ProjectOverview.astro
+++ b/src/components/ProjectOverview.astro
@@ -2,6 +2,7 @@
 import oekologischImage from "@assets/projects/oekologisch-lg.webp";
 import headerImage from "@assets/projects/1914-in-a-timeline-lg.webp";
 import observationMapImage from "@assets/projects/observation-map-lg.webp";
+import storytellrImage from "@assets/projects/storytellr-lg.webp";
 import {Image} from "astro:assets";
 ---
 <section  id="uebersicht">
@@ -25,6 +26,13 @@ import {Image} from "astro:assets";
                src={observationMapImage}
                alt="AltImage"
                loading="eager"
+            />
+        </a>
+        <a href="/projekte/storytellr" rel="prefetch">
+            <Image
+                    src={storytellrImage}
+                    alt="AltImage"
+                    loading="eager"
             />
         </a>
     </article>
