--- a/src/pages/projekte/observation-map.astro
+++ b/src/pages/projekte/observation-map.astro
@@ -80,6 +80,7 @@ const headerImgAlt = 'Alt Image';
     gap: 5rem;
     h1 {
       margin-bottom: -3rem;
+      text-align: center;
     }
   }
   .content {
