--- a/src/pages/projekte/oekologisch.astro
+++ b/src/pages/projekte/oekologisch.astro
@@ -88,6 +88,7 @@ const headerImgAlt = 'Alt Description';
     gap: 5rem;
     h1 {
       margin-bottom: -3rem;
+      text-align: center;
     }
   }
   .content {
