--- a/src/layouts/LayoutProject.astro
+++ b/src/layouts/LayoutProject.astro
@@ -23,6 +23,7 @@ const { title, description, headerImage, headerImageAlt } = Astro.props;
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="sitemap" href="/sitemap-index.xml" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="robots" content="noindex">
 		<title>{title}</title>
