--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,9 @@ import {Image} from "astro:assets";
                     loading="eager"
             />
         </div>
+        <!--
         <h2 style="text-align: center; padding-top: 5rem">Einblick in meine Projekte</h2>
-        <ProjectSwiperVue client:load />
+        <ProjectSwiperVue client:load /> -->
     </section>
     <section>
         <div class="content">
